welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:2: error: Missing closing brace `}' assumed here
var compteur = 0
^Poucet:13: error: ';' expected but 'else' found.
	else {gauche();
        ^